* Changed autodrop default to 2 for fewer unexpected autodrops (thanks paka)
* Saved users file more often to have fewer missing nicks around
* CID of user shown if nick is missing (in queue for example)
* Added display of CID in a few places
* Updated yaSSL to 1.2.2
* Fixed ADC hubname display (thanks ullner)

-- 0.689 2006-04-01 --
* Fixed displaying of available bytes when user list is off
* Fixed a potential crash when not showing user list
* Fixed 100% CPU bug on upload
* [bug 853] Fixed missing function in opencow

-- 0.688 2006-03-18 --
* Fixed public hubs sorting (thanks pothead)
* Fixed a ZPipe issue (thanks jove)
* [bug 858] Fixed a 100% cpu / crash bug
* [bug 872] Fixed a pm issue hopefully
* [bug 812] Fixed pm's being sent to bots
* Files with invalid crc-32, as per their sfv file, are no longer shared
* [bug 873] Added connect to hub option (thanks joakim tosteberg)
* Fixed an issue with linux file reading (thanks bart vullings and steven)
* Added back/forward mouse/keyboard navigation to directory listing frame

-- 0.687 2006-02-26 --
* Fixed XML file list generation for invalid filenames from other os's
* Fixed a rare refresh crash
* CID is now shown if no nick name is currently available for a user
* Fixed another crash when loading file lists
* Played some more with bufferedsocket performance
* Fixed some VS 2005 issues (thanks trem)
* Installer now removes old unicows library
* Updated to yaSSL 1.1.5
* Added possiblity to sort transfer view by all downloads first (thanks guitarm)
* Some cleanup for frame creation (thanks martin)
* Fixed some translation strings (thanks fleetcommand)
* Fixed some finished transfers frames issues (thanks trem)
* /pm and and a few other things work without user list in hub frame
* Added support for the ZPipe extension (test version) (thanks jove)
* Moved to subversion, CVS will no longer be maintained

-- 0.686 2006-02-13 --
* Fixed active search (oops)
* Fixed a crash when clicking on dchub links
